# DragonSlayer

./: .gitignore  CMakeLists.txt  ExampleCode.txt  README.md  main.cpp
AI/: AIBehaviour.cpp  AIBehaviour.h  BattleAI.cpp  BattleAI.h
Components/: AchievementComponent.cpp  AchievementComponent.h  AchievementsEnum.h  AnimationComponent.cpp  AnimationComponent.h  BuffComponent.cpp  BuffComponent.h  CollisionBoxComponent.cpp  CollisionBoxComponent.h  HitBoxComponent.cpp  HitBoxComponent.h  MovementComponent.cpp  MovementComponent.h  PopUpTextComponent.cpp  PopUpTextComponent.h  SpellComponent.cpp  SpellComponent.h
Config/: window.ini
Core/: BattleState.cpp  BattleState.h  Common.h  DebugTool.cpp  DebugTool.h  Game.cpp  Game.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  Observer.h  RunTimeClock.cpp  RunTimeClock.h  State.cpp  State.h  Subject.h
Data/: Achievements.txt  Equipment.txt  Inventory.txt  Materials.txt  New Text Document.txt  Spells.txt  Stats.txt  bossroom.txt  dungeon.txt  dungeon_1.txt  dungeon_2.txt  dungeon_3.txt  dungeon_4.txt  dungeon_5.txt  hub.txt  note.txt  random descriptions.txt
Data/Equipment names/: Axe.txt  Boots.txt  Bow.txt  Shield.txt  Sword.txt  arms.txt  chest.txt  head.txt
Entity/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
Game/: Achievement.cpp  Achievement.h  BattleResult.cpp  BattleResult.h  BattleState.cpp  BattleState.h  Buff.cpp  Buff.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Generator.cpp  Generator.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  LootBag.cpp  LootBag.h  LootGenerator.cpp  LootGenerator.h  Npc.cpp  Npc.h  Player.cpp  Player.h  Save.cpp  Save.h  Spell.cpp  Spell.h  Stats.cpp  Stats.h  Utils.cpp  Utils.h
Gui/: AchievementTab.cpp  AchievementTab.h  CharacterTab.cpp  CharacterTab.h  Gui.cpp  Gui.h  LoadSaveTab.cpp  LoadSaveTab.h  PauseMenu.cpp  PauseMenu.h  PriestTab.cpp  PriestTab.h  SelectLevelTab.cpp  SelectLevelTab.h  ShopTab.cpp  ShopTab.h  SpellTab.cpp  SpellTab.h  WizardTab.cpp  WizardTab.h
Map/: Dungeon.cpp  Dungeon.h  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  MiniMap.cpp  MiniMap.h  Node.cpp  Node.h  PathFinder.cpp  PathFinder.h  Tile.cpp  Tile.h
Resources/: EnemySaveData.cpp  EnemySaveData.h  LootBagSaveData.cpp  LootBagSaveData.h  Resource.cpp  Resource.h  ResourcesHandler.cpp  ResourcesHandler.h  SavesHandler.cpp  SavesHandler.h
Resources/Config/: window.ini
Resources/Images/Sprites/Enemy/Dragon/: dragon_sprite.xcf
Resources/Images/Sprites/Enemy/Flying eye/: sprite_sheet.xcf
Resources/Images/Sprites/Enemy/Goblin/: sprite_sheet.xcf
Resources/Images/Sprites/Enemy/Mushroom/: sprite_sheet.xcf
Resources/Images/Sprites/Enemy/Skeleton/: sprite_sheet.xcf
Resources/Images/Sprites/Enemy/Skeleton2/: sprite_sheet.xcf
Resources/Images/Sprites/Enemy/Witch/: sprite_sheet.xcf
Resources/Images/Sprites/Player/: player_sheet.xcf  player_sheet2.xcf
Shader/: fragment_shader.frag  vertex_shader.vert
includers/: CerealHeaders.h
unit_testing/: CMakeLists.txt  PlayerTests.cpp  Tests.cpp  classTT.h  mainTest.cpp  test.cpp
